--- a/package.json
+++ b/package.json
@@ -16,13 +16,15 @@
     "vue": "^3.4.29",
     "vue-router": "^4.4.0",
     "vue-spinner": "^1.0.4",
-    "vue-toastification": "^2.0.0-rc.5"
+    "vue-toastification": "^2.0.0-rc.5",
+    "vuetify": "^3.6.8"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
     "autoprefixer": "^10.4.19",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "@mdi/font": "^7.4.47"
   }
 }
