--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "server": "json-server --watch src/properties.json --port 8000"
+    "build-db": "node scripts/generate-db.js",
+    "server": "npm run build-db && json-server --watch db.json --port 8000"
   },
   "dependencies": {
     "axios": "^1.7.2",
