--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "server": "npm run build-db && json-server --watch db.json --port 8000"
   },
   "dependencies": {
+    "@vicons/ionicons5": "^0.13.0",
     "axios": "^1.7.2",
     "json-server": "^1.0.0-beta.1",
     "naive-ui": "^2.41.0",
